fixed search button alignment

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -109,7 +109,6 @@ section {
 
 .form-control {
     display: block;
-    height: 100%;
     line-height: 2;
     background-color: white;
     border: 1px solid #79D0C6
